package com.github.e1turin.lab5.util;


public interface IDateValidator {
    boolean isValid(String dateStr);
}
