package com.github.e1turin.lab5.collection

enum class MusicGenre { PROGRESSIVE_ROCK, RAP, BLUES, PUNK_ROCK }
