package com.github.e1turin.lab5.collection

class Label (private var bands: Long){
}